--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,8 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // RxJava
+    compile 'io.reactivex.rxjava2:rxjava:2.2.12'
+    compile 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
